_1.2.2_nginx_ingress/test/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-nlb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: test.arguscloud.in
spec:
  rules:
    - host: test.arguscloud.in
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test-nginx-svc
                port:
                  number: 80

# kubectl delete -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.11.1/deploy/static/provider/cloud/deploy.yaml
